<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dnisyndrum.dynamicmusicplayer.MorningSettings"
    android:background="@color/clrMorning2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblMorningSongSet"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblSpeed1"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="@dimen/design_bottom_navigation_active_item_max_width"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/clrMorning1"
        android:layout_marginRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblSpeed2"
        android:id="@+id/textView4"
        android:layout_below="@+id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="@dimen/design_bottom_navigation_active_item_max_width"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/clrMorning1"
        android:layout_marginRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblSpeed3"
        android:id="@+id/textView5"
        android:layout_below="@+id/spinner2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="@dimen/design_bottom_navigation_active_item_max_width"
        android:layout_height="wrap_content"
        android:id="@+id/spinner3"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/clrMorning1"
        android:layout_marginRight="5dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_content_inset_with_nav"
        android:layout_height="wrap_content"
        android:text="@string/btnSave"
        android:id="@+id/button6"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/clrMorning1"
        android:onClick="saveOnClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:text="@string/btnPlus"
        android:id="@+id/button7"
        android:background="@color/clrMorning1"
        android:layout_alignTop="@+id/spinner"
        android:layout_toLeftOf="@+id/button12"
        android:layout_toStartOf="@+id/button12"
        android:layout_marginRight="5dp"
        android:onClick="addOnClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:text="@string/btnMinus"
        android:id="@+id/button8"
        android:layout_alignTop="@+id/button7"
        android:layout_toRightOf="@+id/button7"
        android:layout_toEndOf="@+id/button7"
        android:background="@color/clrMorning1"
        android:onClick="deleteOnClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:text="@string/btnPlus"
        android:id="@+id/button9"
        android:background="@color/clrMorning1"
        android:layout_alignTop="@+id/spinner2"
        android:layout_toRightOf="@+id/spinner2"
        android:layout_toEndOf="@+id/spinner2"
        android:layout_marginRight="5dp"
        android:onClick="addOnClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:text="@string/btnMinus"
        android:id="@+id/button10"
        android:layout_alignTop="@+id/button9"
        android:layout_alignLeft="@+id/button8"
        android:layout_alignStart="@+id/button8"
        android:background="@color/clrMorning1"
        android:onClick="deleteOnClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:text="@string/btnPlus"
        android:id="@+id/button11"
        android:layout_alignTop="@+id/spinner3"
        android:layout_toRightOf="@+id/spinner3"
        android:layout_toEndOf="@+id/spinner3"
        android:background="@color/clrMorning1"
        android:layout_marginRight="5dp"
        android:onClick="addOnClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:text="@string/btnMinus"
        android:id="@+id/button12"
        android:layout_alignTop="@+id/button11"
        android:layout_toRightOf="@+id/button11"
        android:layout_toEndOf="@+id/button11"
        android:background="@color/clrMorning1"
        android:onClick="deleteOnClick" />

</RelativeLayout>
