<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dnisyndrum.dynamicmusicplayer.AfternoonSettings"
    android:background="@color/clrAfternoon2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblAfternoonSongSet"
        android:id="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView9"
        android:layout_toEndOf="@+id/textView9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblSpeed1"
        android:id="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="@dimen/design_bottom_navigation_active_item_max_width"
        android:layout_height="wrap_content"
        android:id="@+id/spinner4"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:background="@color/clrAfternoon1"
        android:layout_marginRight="5dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:text="@string/btnPlus"
        android:id="@+id/button13"
        android:layout_below="@+id/textView7"
        android:layout_toRightOf="@+id/spinner4"
        android:layout_toEndOf="@+id/spinner4"
        android:background="@color/clrAfternoon1"
        android:layout_marginRight="5dp"
        android:onClick="addOnClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:text="@string/btnMinus"
        android:id="@+id/button14"
        android:layout_below="@+id/textView7"
        android:layout_toRightOf="@+id/button13"
        android:layout_toEndOf="@+id/button13"
        android:background="@color/clrAfternoon1"
        android:onClick="deleteOnClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblSpeed2"
        android:id="@+id/textView8"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button14"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="@dimen/design_bottom_navigation_active_item_max_width"
        android:layout_height="wrap_content"
        android:id="@+id/spinner5"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:background="@color/clrAfternoon1"
        android:layout_marginRight="5dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:text="@string/btnPlus"
        android:id="@+id/button15"
        android:layout_below="@+id/textView8"
        android:layout_toRightOf="@+id/spinner5"
        android:layout_toEndOf="@+id/spinner5"
        android:background="@color/clrAfternoon1"
        android:layout_marginRight="5dp"
        android:onClick="addOnClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:text="@string/btnMinus"
        android:id="@+id/button16"
        android:layout_alignTop="@+id/button15"
        android:layout_alignLeft="@+id/button14"
        android:layout_alignStart="@+id/button14"
        android:background="@color/clrAfternoon1"
        android:onClick="deleteOnClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblSpeed3"
        android:id="@+id/textView9"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button16"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="@dimen/design_bottom_navigation_active_item_max_width"
        android:layout_height="wrap_content"
        android:id="@+id/spinner6"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:background="@color/clrAfternoon1"
        android:layout_marginRight="5dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:text="@string/btnPlus"
        android:id="@+id/button17"
        android:layout_alignTop="@+id/spinner6"
        android:layout_toLeftOf="@+id/button18"
        android:layout_toStartOf="@+id/button18"
        android:background="@color/clrAfternoon1"
        android:layout_marginRight="5dp"
        android:onClick="addOnClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:text="@string/btnMinus"
        android:id="@+id/button18"
        android:layout_alignTop="@+id/button17"
        android:layout_alignLeft="@+id/button16"
        android:layout_alignStart="@+id/button16"
        android:background="@color/clrAfternoon1"
        android:onClick="deleteOnClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_content_inset_with_nav"
        android:layout_height="wrap_content"
        android:text="@string/btnSave"
        android:id="@+id/button19"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/spinner6"
        android:layout_alignEnd="@+id/spinner6"
        android:background="@color/clrAfternoon1"
        android:nestedScrollingEnabled="false"
        android:onClick="saveOnClick" />
</RelativeLayout>
