<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dnisyndrum.dynamicmusicplayer.NightSettings"
    android:background="@color/clrNight2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblNightSongSet"
        android:id="@+id/textView14"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblSpeed1"
        android:id="@+id/textView15"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView14"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="@dimen/design_bottom_navigation_active_item_max_width"
        android:layout_height="wrap_content"
        android:id="@+id/spinner10"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView15"
        android:layout_centerHorizontal="true"
        android:background="@color/clrNight1"
        android:layout_marginRight="5dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:text="@string/btnPlus"
        android:id="@+id/button27"
        android:layout_alignTop="@+id/spinner10"
        android:layout_toRightOf="@+id/spinner10"
        android:layout_toEndOf="@+id/spinner10"
        android:background="@color/clrNight1"
        android:layout_marginRight="5dp"
        android:onClick="addOnClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:text="@string/btnMinus"
        android:id="@+id/button28"
        android:layout_below="@+id/textView15"
        android:layout_toRightOf="@+id/button27"
        android:layout_toEndOf="@+id/button27"
        android:background="@color/clrNight1"
        android:onClick="deleteOnClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblSpeed2"
        android:id="@+id/textView16"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button28"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="@dimen/design_bottom_navigation_active_item_max_width"
        android:layout_height="wrap_content"
        android:id="@+id/spinner11"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView16"
        android:layout_centerHorizontal="true"
        android:background="@color/clrNight1"
        android:layout_marginRight="5dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:text="@string/btnPlus"
        android:id="@+id/button29"
        android:layout_alignTop="@+id/spinner11"
        android:layout_toLeftOf="@+id/button28"
        android:layout_toStartOf="@+id/button28"
        android:background="@color/clrNight1"
        android:layout_marginRight="5dp"
        android:onClick="addOnClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:text="@string/btnMinus"
        android:id="@+id/button30"
        android:layout_below="@+id/textView16"
        android:layout_alignLeft="@+id/button28"
        android:layout_alignStart="@+id/button28"
        android:background="@color/clrNight1"
        android:onClick="deleteOnClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblSpeed3"
        android:id="@+id/textView17"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button30"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="@dimen/design_bottom_navigation_active_item_max_width"
        android:layout_height="wrap_content"
        android:id="@+id/spinner12"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView17"
        android:layout_centerHorizontal="true"
        android:background="@color/clrNight1"
        android:layout_marginRight="5dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:text="@string/btnPlus"
        android:id="@+id/button31"
        android:layout_alignTop="@+id/spinner12"
        android:layout_toLeftOf="@+id/button30"
        android:layout_toStartOf="@+id/button30"
        android:background="@color/clrNight1"
        android:layout_marginRight="5dp"
        android:onClick="addOnClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:text="@string/btnMinus"
        android:id="@+id/button32"
        android:layout_alignTop="@+id/button31"
        android:layout_alignLeft="@+id/button30"
        android:layout_alignStart="@+id/button30"
        android:background="@color/clrNight1"
        android:onClick="deleteOnClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_content_inset_with_nav"
        android:layout_height="wrap_content"
        android:text="@string/btnSave"
        android:id="@+id/button33"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/spinner12"
        android:layout_alignEnd="@+id/spinner12"
        android:background="@color/clrNight1"
        android:onClick="saveOnClick" />
</RelativeLayout>
