<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dnisyndrum.dynamicmusicplayer.EveningSettings"
    android:background="@color/clrEvening2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lblEveningSongSet"
        android:id="@+id/textView10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblSpeed1"
        android:id="@+id/lblSpeed1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="@dimen/design_bottom_navigation_active_item_max_width"
        android:layout_height="wrap_content"
        android:id="@+id/spinner7"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblSpeed1"
        android:layout_centerHorizontal="true"
        android:background="@color/clrEvening1"
        android:layout_marginRight="5dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:text="@string/btnPlus"
        android:id="@+id/button20"
        android:layout_alignTop="@+id/spinner7"
        android:layout_toRightOf="@+id/spinner7"
        android:layout_toEndOf="@+id/spinner7"
        android:background="@color/clrEvening1"
        android:layout_marginRight="5dp"
        android:onClick="addOnClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:text="@string/btnMinus"
        android:id="@+id/button21"
        android:layout_alignTop="@+id/button20"
        android:layout_toRightOf="@+id/button20"
        android:layout_toEndOf="@+id/button20"
        android:background="@color/clrEvening1"
        android:onClick="deleteOnClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblSpeed2"
        android:id="@+id/textView12"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button21"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="@dimen/design_bottom_navigation_active_item_max_width"
        android:layout_height="wrap_content"
        android:id="@+id/spinner8"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView12"
        android:layout_centerHorizontal="true"
        android:background="@color/clrEvening1"
        android:layout_marginRight="5dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:text="@string/btnPlus"
        android:id="@+id/button22"
        android:layout_alignTop="@+id/spinner8"
        android:layout_toLeftOf="@+id/button21"
        android:layout_toStartOf="@+id/button21"
        android:background="@color/clrEvening1"
        android:layout_marginRight="5dp"
        android:onClick="addOnClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:text="@string/btnMinus"
        android:id="@+id/button23"
        android:layout_alignTop="@+id/button22"
        android:layout_alignLeft="@+id/button21"
        android:layout_alignStart="@+id/button21"
        android:background="@color/clrEvening1"
        android:onClick="deleteOnClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lblSpeed3"
        android:id="@+id/textView13"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button23"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="@dimen/design_bottom_navigation_active_item_max_width"
        android:layout_height="wrap_content"
        android:id="@+id/spinner9"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView13"
        android:layout_centerHorizontal="true"
        android:background="@color/clrEvening1"
        android:layout_marginRight="5dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:text="@string/btnPlus"
        android:id="@+id/button24"
        android:layout_below="@+id/textView13"
        android:layout_toLeftOf="@+id/button23"
        android:layout_toStartOf="@+id/button23"
        android:background="@color/clrEvening1"
        android:layout_marginRight="5dp"
        android:onClick="addOnClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:text="@string/btnMinus"
        android:id="@+id/button25"
        android:layout_alignTop="@+id/button24"
        android:layout_alignLeft="@+id/button23"
        android:layout_alignStart="@+id/button23"
        android:background="@color/clrEvening1"
        android:onClick="deleteOnClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/abc_action_bar_content_inset_with_nav"
        android:layout_height="wrap_content"
        android:text="@string/btnSave"
        android:id="@+id/button26"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/spinner9"
        android:layout_alignEnd="@+id/spinner9"
        android:background="@color/clrEvening1"
        android:onClick="saveOnClick" />
</RelativeLayout>
